@@ -1,0 +1,5 @@
+#
+# Query User about CVS snapshots.
+#
+config_query	CS_CVS			\
+	"Use CVS Daily Snapshot?"	n
